Backported refinements and polishing